# example-yarp-plugin-gtest

./: .travis.yml  CMakeLists.txt  README.md
cmake/template/: EXAMPLE_YARP_PLUGIN_GTESTConfig.cmake.in  GTEST_YARP_PLUGINSConfig.cmake.in
doc/: groups.dox  main.dox
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt  ExampleLibrary.cpp  ExampleLibrary.hpp  ExampleLibrary.ini
programs/: CMakeLists.txt
programs/exampleProgram/: CMakeLists.txt  ExampleProgram.cpp  ExampleProgram.hpp  main.cpp
scripts/admin/: update-dox.sh
scripts/gnome/: gtest-yarp-plugins.desktop
share/: CMakeLists.txt
test/: CMakeLists.txt  testExampleLibrary.cpp
